--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,7 +68,29 @@ body {
   text-align: justify;
 }
 
+@media (max-width: 940px) {
+  .dynamic-text {
+    font-size: clamp(1rem, 4vw, 10rem);
+    text-align: justify;
+  }  
+}
+
 .seriesCover {
   width: 100%;
   max-height: 600px;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
