admin not opening

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -334,3 +334,9 @@ body {
 .footerNav p:hover {
   text-decoration: underline !important;
 }
+
+
+.Archsummary {
+  max-width: 640px;
+  margin: 1.5em auto 1.5em;
+}
