--- a/src/app/(frontend)/components/build.module.scss
+++ b/src/app/(frontend)/components/build.module.scss
@@ -47,11 +47,13 @@
     background-color: black;
     padding: 10px 30px;
     margin-left: 15px;
+    cursor: pointer;
   }
 
   .resetButton {
     background-color: #2980B9;
     padding: 10px 30px;
+    cursor: pointer;
   }
 
   .resetButton:hover {
